# mcp-fortress

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  false_negative.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: developer_guide.md
examples/: fastapi_integration.py  policy_developer.yaml  policy_enterprise.yaml  quickstart.py
mcpshield/: __init__.py
mcpshield/cli/: main.py  scanner.py
mcpshield/core/: models.py  pipeline.py
mcpshield/detectors/: __init__.py  bad_engine.py  blast_radius.py  correlator.py  pii_scanner.py  tdiv.py
mcpshield/policy/: firewall.py
mcpshield/transport/: dashboard.html  dashboard_route.py  proxy.py  stdio_proxy.py
scripts/: setup_github.sh
tests/: run_tests.py  test_all.py
