[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-fortress"
version = "0.1.0"
description = "Production-grade security firewall & proxy for AI Agent MCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Avoceous", email = "Avoceous@users.noreply.github.com" }
]
keywords = [
    "mcp", "security", "ai-agent", "firewall", "prompt-injection",
    "tool-poisoning", "llm-security", "ai-security", "mcp-fortress"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security"
]

dependencies = []

[project.optional-dependencies]
proxy = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "websockets>=12"
]
pii = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2"
]
yaml = [
    "pyyaml>=6.0"
]
dashboard = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1"
]

[project.scripts]
mcp-fortress = "mcpshield.cli.main:main"
mcp-fortress-stdio = "mcpshield.transport.stdio_proxy:main_stdio"

[tool.hatch.build.targets.wheel]
packages = ["mcpshield"]
